# raiden-cogs

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  dev-requirements.txt  info.json  pyproject.toml  tox.ini
.github/red_data/cogs/CogManager/: settings.json
.github/red_data/core/: settings.json
.github/workflows/: checks.yml  lint.yml  loadcheck.yml
.github/workflows/scripts/: loadcheck.py
choose/: README.md  __init__.py  choose.py  info.json
genshinutils/: README.md  __init__.py  constants.py  daily.py  genshinutils.py  info.json  notes.py  profile.py  register.py  settings.py  utils.py
hoyotools/: README.md  __init__.py  hoyotools.py  info.json  vars.py  views.py
longcat/: README.md  __init__.py  info.json  longcat.py
pcmasterrace/: README.md  __init__.py  info.json  pcmasterrace.py  utils.py  views.py
pcmasterrace/scores/: README.md  cpu.json  cpu.py  gpu.json  gpu.py  weights.json
throw/: README.md  __init__.py  constants.py  info.json  throw.py
