[project]
requires-python = "<3.12,>=3.9"
name = "raiden-cogs"
version = "0.1.0"
description = "Raiden's cogs for Red Discord Bot"
authors = [
    { name = "Raiden Sakura", email = "raiden@project-mei.xyz" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "black==23.12.0",
    "ruff==0.12.5",
    "pre-commit==4.2.0"
]
